# sql-parser-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh
.changes/: 0.0.1.md
include/sql-parser-library/: date_utils.h  named_pointer.h  sql_ast.h  sql_ctx.h  sql_interval.h  sql_node.h  sql_tokenizer.h
include/sql-parser-library/brutezone/: timezone.h  timezone_database.h  timezone_impl.h
samples/dates/: test_dates1.json
samples/random/: tests.json  tests2.json  tests3.json  tests4.json  tests5.json
samples/specific/: sql_arithmetic_where_tests.json  test_arithmetic.json  test_between.json  test_between2.json  test_in_notin.json  test_like.json  test_not_logic.json  test_notin2.json  test_null.json  test_special.json  test_string_between.json
src/: sql_ast.c  sql_ast_to_node.c  sql_ctx.c  sql_interval.c  sql_node.c  sql_tokenizer.c
src/brutezone/: timezone.c  timezone_impl.c
src/specs/: arithmetic.c  avg.c  between.c  boolean.c  cast_convert.c  coalesce.c  comparison.c  concat.c  convert_tz.c  date_trunc.c  extract.c  in.c  is_boolean.c  is_null.c  length.c  like.c  lower_upper.c  min_max.c  now.c  round.c  substr.c  sum.c  trim.c
src/utils/: date_utils.c  named_pointer.c
tests/: CMakeLists.txt
tests/src/: json_sql.c  sql_driver.c  sql_parser.c  sql_parser2.c
